# Course-Connector

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  module.yaml  pyproject.toml
configs/: default.yaml
data/examples/: assessments.csv  config.yaml  course_a.md  course_b.yaml  mapping.json  skill_dictionary.yaml  source_pack.csv
data/examples/big_course/: assessments.md  config.yaml  course_git.md  course_github.md  skill_dictionary.yaml
data/examples/course_a/: course.yaml
data/examples/course_b/: course.yaml
data/examples/real_api_demo/: assessments.csv  skill_dictionary.yaml
docs/: evidence_contract.md  field_trial.md  input_format.md  mvp_scope.md  output_format.md  scenario.md  uml_diagrams.md
openspec/changes/design-llm-course-comparison/: design.md  proposal.md  tasks.md
schemas/: course_comparison_candidates.schema.json  course_comparison_report.schema.json
scripts/: export_moodle_raw_course_tree.py  llm_verify_course_comparison.py  normalize_moodle_course.py  prepare_course_comparison.py  render_course_comparison_report.py
src/course_connector/: __init__.py  cli.py  pipeline.py
src/course_connector/input_layer/: __init__.py  loader.py
src/course_connector/llm_layer/: __init__.py  analyzer.py  batch_analyzer.py  config.py  context.py  findings_merge.py
tests/: test_cli.py  test_input_layer.py  test_llm_layer.py  test_prepare_course_comparison.py  test_preprocessing_layer.py  test_report_layer.py
tests/fixtures/: min_course_a.course.normalized.json  min_course_b.course.normalized.json
(+36 files in other folders)
