[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "course-connector"
version = "0.1.0"
description = "CLI pipeline for connecting course materials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers",
]

[project.scripts]
course-connector = "course_connector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
course_connector = ["llm_layer/prompts/*.md"]
